<resources>

    <string name="app_name">IP智能停车</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <!-- MainActivity相关 -->
    <string name="main_tab_near">附近</string>
    <string name="main_tab_route">路线</string>
    <string name="main_tab_nav">导航</string>
    <string name="main_tab_mine">我的</string>
    <string name="main_park_infowindow_reserve">预订</string>
    <string name="main_park_infowindow_navi">导航</string>
    <string name="main_traffic">路况</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="search_tab">搜地点、查公交、找路线</string>


    <!-- 登陆界面 -->
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="welcome_login">登录</string>
    <string name="account">输入手机号</string>
    <string name="password">输入密码</string>
    <string name="login">登 录</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="user_yue">用户余额</string>
    <string name="login_register">立即注册</string>
    <string name="lv_url">使用条款和隐私政策</string>
    <string name="title_activity_search_park">SearchParkActivity</string>

    <!-- 搜索界面 -->
    <string name="search">搜索</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="chezhu">车主招募</string>
    <string name="youjiang">有奖骑车</string>
    <string name="wangba">网吧</string>
    <string name="xiyu">洗浴</string>
    <string name="meishi">美食</string>
    <string name="jingdian">景点</string>
    <string name="jiudian">酒店</string>
    <string name="chaoshi">超市</string>
    <string name="yinghang">银行</string>
    <string name="gongjiaozhan">公交站</string>
    <string name="jiaouzhan">加油站</string>
    <string name="gengduo">更多＞</string>
    <string name="title_activity_nearby">NearbyActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_voice">VoiceActivity</string>
    <string name="title_activity_user_center">UserCenterActivity</string>

    <!-- 用户中心界面 -->
    <string name="username">智能停车场</string>
    <string name="weather">24/21℃ 武汉</string>
    <string name="kongqizhiliang">29 优</string>
    <string name="zuji">我的足迹</string>
    <string name="lixiab">离线下载包</string>
    <string name="shoucang">收藏</string>
    <string name="changyong">常用地址</string>
    <string name="digndan">订单</string>
    <string name="gongxian">贡献</string>
    <string name="caifu">财富</string>
    <string name="wodezhidahao">我的直达号</string>
    <string name="ceju">测距</string>
    <string name="shenbian">身边雷达</string>
    <string name="huodong">活动专区</string>
    <string name="bangzhu">帮助与反馈</string>
    <string name="shezhi">设置</string>
    <string name="tuichu">退出IP智能停车场</string>

    <!-- 退出窗口 -->
    <string name="dialog_title">退出</string>
    <string name="dialog_text">确定要退出IP智能停车？</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_determine">确定</string>

    <!-- 附近界面 -->
    <string name="nearby_search_hint">在我的位置附近搜索</string>
    <string name="title_activity_customer_service">CustomerServiceActivity</string>

    <!-- 客服中心界面 -->
    <string name="customer_service_title">客户服务中心</string>
    <string name="customer_service_send">发送</string>
    <string name="customer_service_name">IP小秘书</string>

</resources>
