<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/backgound_light_gray"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              tools:context="com.hswarov.intelligentparking.activity.SearchActivity">

    <include
        android:id="@+id/search_title_tab"
        layout="@layout/search_tab_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        />

    <include
        layout="@layout/include_horizontal_separator_black_line"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <LinearLayout
        android:id="@+id/search_gv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/general_white_bg_black_border_shape"
        android:orientation="vertical"
        android:padding="1dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/general_item_selector"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/xiyu"
                android:textColor="@color/general_black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <include layout="@layout/include_vertical_seperator_line"/>
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/general_item_selector"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/chezhu"
                android:textColor="@color/general_orange"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <include layout="@layout/include_vertical_seperator_line"/>
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/general_item_selector"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/youjiang"
                android:textColor="@color/general_orange"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <include layout="@layout/include_vertical_seperator_line"/>
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/general_item_selector"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/wangba"
                android:textColor="@color/general_black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <include
                layout="@layout/include_horizontal_separator_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/general_item_selector"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/meishi"
                android:textColor="@color/general_black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <include layout="@layout/include_vertical_seperator_line"/>
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/general_item_selector"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/jingdian"
                android:textColor="@color/general_black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <include layout="@layout/include_vertical_seperator_line"/>
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/general_item_selector"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/jiudian"
                android:textColor="@color/general_black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <include layout="@layout/include_vertical_seperator_line"/>
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/general_item_selector"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/chaoshi"
                android:textColor="@color/general_black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <include
                layout="@layout/include_horizontal_separator_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/general_item_selector"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/yinghang"
                android:textColor="@color/general_black"/>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <include layout="@layout/include_vertical_seperator_line"/>
            </LinearLayout>


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/general_item_selector"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/gongjiaozhan"
                android:textColor="@color/general_black"/>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <include layout="@layout/include_vertical_seperator_line"/>
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/general_item_selector"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/jiaouzhan"
                android:textColor="@color/general_black"/>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <include layout="@layout/include_vertical_seperator_line"/>
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/general_item_selector"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/gengduo"
                android:textColor="@color/blue"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
