<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context="com.hswarov.intelligentparking.activity.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_launcher"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/please_input_username"/>

        <EditText
            android:id="@+id/login_pw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/please_input_password"/>

        <Button
            android:id="@+id/Login_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            style="@style/Base.Widget.AppCompat.Button"
            android:text="@string/welcome_login"/>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        >

        <com.hswarov.intelligentparking.widget.TextURLView
            android:id="@+id/login_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/blue"
            android:textSize="18sp"/>

        <com.hswarov.intelligentparking.widget.TextURLView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/blue"
            android:textSize="18sp"/>
    </RelativeLayout>


</LinearLayout>
