<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backgound_light_gray"
                tools:context="com.hswarov.intelligentparking.activity.UserCenterActivity">

    <ScrollView
        android:id="@+id/usercenter_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/usercenter_title_ll"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/general_blue"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.hswarov.intelligentparking.widget.CircleImageView
                    android:id="@+id/usercenter_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/daijia_head_placehoder"
                    app:border_color="#FFFFFFFF"
                    app:border_width="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/username"
                    android:textColor="@color/White"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/weather"
                        android:textColor="@color/White"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/kongqizhiliang"
                        android:textColor="@color/White"/>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_alignBottom="@+id/usercenter_title_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/general_item_selector">

                    <ImageView
                        android:id="@+id/usercenter_zuji_iv"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/icon_usercenter_travel"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/usercenter_zuji_iv"
                        android:layout_toRightOf="@id/usercenter_zuji_iv"
                        android:text="@string/zuji"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/backgound_light_gray"
                        android:src="@drawable/user_center_score_arrow_pic"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0.01dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <include
                            layout="@layout/include_horizontal_separator_line"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/general_item_selector">

                    <ImageView
                        android:id="@+id/usercenter_lixian_iv"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/icon_usercenter_travel"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/usercenter_lixian_iv"
                        android:layout_toRightOf="@id/usercenter_lixian_iv"
                        android:text="@string/zuji"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/backgound_light_gray"
                        android:src="@drawable/user_center_score_arrow_pic"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0.01dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <include
                            layout="@layout/include_horizontal_separator_line"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
